--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  flutter_svg: ^0.12.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/assets/images/bg.png
+    - lib/assets/images/avatar.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
