--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  flutter_svg: ^0.12.1
+  flutter_svg: ^1.1.1+1
 
 dev_dependencies:
   flutter_test:
@@ -57,8 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/assets/images/bg.png
-    - lib/assets/images/avatar.png
+    - assets/images/
+    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
