--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
-//        mavenCentral()
         maven{url 'https://maven.aliyun.com/repository/google' }
         maven{url 'https://maven.aliyun.com/repository/google-plugin' }
         maven{url 'https://maven.aliyun.com/repository/public' }
         maven{url 'https://maven.aliyun.com/repository/jcenter' }
+        google()
+        mavenCentral()
     }
 }
 
